results/SVCOMP/4-shot/log-exceptions18-2024_03_18_15_41_39.txt
class A extends RuntimeException {}

class B extends A {}

public class exception18 {
  //@ requires true;
  //@ ensures \result == \nothing;
  private static void foo() {
    A a = new A();
    throw a;
  }

  //@ requires \typeof(args) == \type(String[]);
  //@ ensures \result == \nothing;
  public static void main(String[] args) {
    try {
      foo();
      assert false;
    } catch (B e) {
      assert false;
    } catch (A e) {
      // expected here
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:7: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == \nothing;
               ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:7: error: No operator for <any> == none
  //@ ensures \result == \nothing;
                      ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:14: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == \nothing;
               ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:14: error: No operator for <any> == none
  //@ ensures \result == \nothing;
                      ^
5 errors

